[package]
name = "linux-info"
description = "Get every info about your linux system."
version = "0.1.7"
authors = ["Sören Meier <soeren@s-me.ch>"]
repository = "https://github.com/soerenmeier/linux-info"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["linux", "hardware"]
categories = ["hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "df_h"

[[example]]
name = "dmidecode-mini"
path = "./examples/dmidecode_mini.rs"

[features]

[dependencies]
byte-parser = { version = "0.2.1", features = ["unstable-parse-iter"] }
libc = "0.2"
simple-bytes = "0.2.9"
memchr = "2.4.1"
uuid = "0.8"