[package]
name = "linux-info"
description = "Get every info about your linux system."
version = "0.1.15"
authors = ["Sören Meier <soeren@s-me.ch>"]
repository = "https://github.com/soerenmeier/linux-info"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["linux", "hardware"]
categories = ["hardware-support"]
rust-version = "1.56"

[[example]]
name = "df_h"

[[example]]
name = "dmidecode-mini"
path = "./examples/dmidecode_mini.rs"

[[example]]
name = "network"
required-features = ["network"]

[features]
network = ["nmdbus", "mmdbus", "dbus"]
serde = ["serde1"]

[dependencies]
byte-parser = { version = "0.2.1", features = ["unstable-parse-iter"] }
libc = "0.2"
simple-bytes = "0.2.11"
memchr = "2.4.1"
uuid = "0.8"
serde1 = { package = "serde", version = "1.0", features = ["derive"], optional = true }
nmdbus = { version = "1.20", optional = true }
mmdbus = { version = "1.16", optional = true }
dbus = { version = "0.9", optional = true }

[package.metadata.docs.rs]
all-features = true